--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,58 +1,54 @@
-# Simple workflow for deploying a VITE (React/Vue/Svelte) app to GitHub Pages
+# Workflow para deploy de apps VITE (React/Vue/Svelte) no GitHub Pages
 name: Deploy Vite App to Pages
 
 on:
-  # Runs on pushes targeting the 'main' branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # O Job de Build é responsável por compilar o código
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 1. Configura o Node.js (necessário para npm)
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Use uma versão LTS estável
+          node-version: '20'
+          cache: 'npm' # Adicionado para builds mais rápidos
 
-      # 2. Instala as dependências do projeto
       - name: Install dependencies
-        run: npm install
+        run: npm ci # 'npm ci' é mais seguro para ambientes de CI/CD do que 'npm install'
 
-      # 3. Executa o comando de build (cria a pasta 'dist')
       - name: Build project
         run: npm run build
 
-      # 4. Configura o GitHub Pages
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      # 5. Faz o upload da pasta 'dist' como artefato
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # É CRUCIAL que o path a ser upado seja a pasta de build
-          path: './dist' 
-          
+          path: './dist' # Garante que a pasta 'dist' (gerada pelo Vite) é a enviada
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build # Garante que o deploy só começa após o build terminar com sucesso
+    environment:
+      name: github-pages
+      url: ${{ steps: deployment.outputs.page_url }}
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
